<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="7dp"
        android:id="@+id/textView_main_title"
        android:gravity="center"
        android:background="@color/colorSkyBlue"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/imageView_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/samplebus"
        android:layout_below="@+id/textView_main_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:id="@+id/relativelayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView_main"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/tour_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tour_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:background="@drawable/textborder" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout_main"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/people_counting"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/people_counting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="@drawable/textborder"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/appointment_time"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:background="@drawable/textborder"
                android:textSize="15sp"/>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relativelayout_main"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="22dp"
        android:background="@color/colorSkyBlue"
        android:text="@string/check_title" />


    <LinearLayout
        android:id="@+id/linear_layout_main_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/btn_check"
        android:layout_marginTop="17dp">

        <Button
            android:id="@+id/btn_check_absence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSkyBlue"
            android:text="不在者ピ"
            android:textColor="@color/colorPrimary"
            android:gravity="center|right"/>
        <Button
            android:id="@+id/btn_ble_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorSkyBlue"
            android:textColor="@color/colorPrimary"
            android:text="ックアップ"
            android:gravity="center|left"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="17dp"
        android:layout_below="@id/linear_layout_main_demo"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorSkyBlue"
        android:text="@string/settings_title" />


</RelativeLayout>
